<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountInfoFragment">

    <TextView
        android:id="@+id/userType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/studentType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="72dp"
        android:text="@string/studentPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailingAddressLabel" />

    <TextView
        android:id="@+id/mailingAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/mailingAddressLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolEnrolled" />

    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/studentNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userType" />

    <TextView
        android:id="@+id/schoolEnrolled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="108dp"
        android:text="@string/schoolEnrolledLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userType" />

    <EditText
        android:id="@+id/schoolName"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="92dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/schoolEnrolled"
        app:layout_constraintTop_toBottomOf="@+id/userType" />

    <EditText
        android:id="@+id/mailingAddress"
        android:layout_width="164dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:inputType="textMultiLine"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/mailingAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/schoolName" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:inputType="phone"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/phoneNumberLabel"
        app:layout_constraintTop_toBottomOf="@+id/mailingAddress" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="172dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/userimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateStudentName"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/studentName"
        app:layout_constraintTop_toBottomOf="@+id/userType" />


</androidx.constraintlayout.widget.ConstraintLayout>